--- a/src/main/resources/views/CakeCard.fxml
+++ b/src/main/resources/views/CakeCard.fxml
@@ -1,23 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="cakeCardVbox" alignment="CENTER" prefHeight="196.0" prefWidth="180.0" styleClass="card"
-      xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1"
-      fx:controller="com.cakeshopsystem.controllers.CakeCardController">
-    <ImageView fx:id="cakeImage" fitHeight="140.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true"/>
-    <Label fx:id="cakeName" styleClass="cake-header"/>
-    <Label fx:id="cakePrice"/>
-    <HBox alignment="CENTER" styleClass="qty-stepper">
-        <Button fx:id="decreaseBtn" text="-" styleClass="card-dec-btn"/>
-        <Label fx:id="quantityLabel" text="0" styleClass="qty-label" HBox.hgrow="ALWAYS"/>
-        <Button fx:id="increaseBtn" text="+" styleClass="card-inc-btn"/>
-    </HBox>
-    <Label fx:id="diyAvailable"/>
-    <HBox alignment="CENTER_RIGHT">
-        <Button fx:id="addToCartBtn" mnemonicParsing="false" text="Add to Cart" styleClass="card-btn"/>
-    </HBox>
-</VBox>
+<StackPane xmlns:fx="http://javafx.com/fxml/1" styleClass="card" stylesheets="@../assets/css/style.css"
+           xmlns="http://javafx.com/javafx/25" fx:controller="com.cakeshopsystem.controllers.CakeCardController">
+
+    <VBox fx:id="cakeCardVbox" spacing="10" styleClass="card-body">
+
+        <!-- Image -->
+        <StackPane styleClass="image-wrap">
+            <ImageView fx:id="cakeImage" fitHeight="140.0" fitWidth="180.0" pickOnBounds="true" preserveRatio="true"
+                       styleClass="card-image"/>
+        </StackPane>
+
+        <!-- Name -->
+        <Label fx:id="cakeName" maxWidth="180.0" styleClass="card-header" wrapText="true"/>
+
+        <!-- Price + DIY availability -->
+        <HBox alignment="CENTER_LEFT" spacing="8">
+            <Label styleClass="meta" text="Price:"/>
+            <Label fx:id="cakePrice" styleClass="card-price"/>
+            <Region HBox.hgrow="ALWAYS"/>
+            <Label fx:id="diyAvailable" styleClass="badge"/>
+        </HBox>
+
+        <!-- Qty + Add -->
+        <HBox alignment="CENTER_LEFT" spacing="10">
+
+            <HBox alignment="CENTER" styleClass="qty-stepper">
+                <Button fx:id="decreaseBtn" mnemonicParsing="false" styleClass="card-dec-btn" text="-"/>
+                <Label fx:id="quantityLabel" alignment="CENTER" minWidth="28" prefWidth="28" styleClass="qty-label"
+                       text="0"/>
+                <Button fx:id="increaseBtn" mnemonicParsing="false" styleClass="card-inc-btn" text="+"/>
+            </HBox>
+
+            <Region HBox.hgrow="ALWAYS"/>
+
+            <Button fx:id="addToCartBtn" mnemonicParsing="false" styleClass="card-btn" text="Add to Cart"/>
+        </HBox>
+
+    </VBox>
+</StackPane>
