--- a/src/main/resources/views/DrinkCard.fxml
+++ b/src/main/resources/views/DrinkCard.fxml
@@ -1,69 +1,76 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
+<StackPane xmlns:fx="http://javafx.com/fxml/1"
+           xmlns="http://javafx.com/javafx/25"
+           fx:controller="com.cakeshopsystem.controllers.DrinkCardController"
+           styleClass="card">
 
-<HBox alignment="CENTER" spacing="20.0" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1">
-   <children>
-      <ImageView fx:id="drinkImage" fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
-         <HBox.margin>
-            <Insets />
-         </HBox.margin>
-      </ImageView>
-      <VBox alignment="CENTER" spacing="20.0">
-         <children>
-            <HBox alignment="CENTER" spacing="20.0">
-               <children>
-                  <VBox spacing="20.0">
-                     <children>
-                        <HBox alignment="CENTER">
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                           <children>
-                              <Button fx:id="btnDecreaseDrink" mnemonicParsing="false" onAction="#clickDecreaseBtn" text="-">
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
-                              </Button>
-                              <Button fx:id="btnIncreaseDrink" mnemonicParsing="false" onAction="#clickIncreaseBtn" text="+">
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
-                              </Button>
-                           </children>
-                        </HBox>
-                        <HBox alignment="CENTER">
-                           <VBox.margin>
-                              <Insets />
-                           </VBox.margin>
-                           <children>
-                              <Button fx:id="btnHotDrink" mnemonicParsing="false" onAction="#clickHotBtn" text="hot">
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
-                              </Button>
-                              <Button fx:id="btnColdDrink" mnemonicParsing="false" onAction="#clickColdBtn" text="cold">
-                                 <HBox.margin>
-                                    <Insets />
-                                 </HBox.margin>
-                              </Button>
-                           </children>
-                        </HBox>
-                     </children>
-                  </VBox>
-                  <Button fx:id="btnAddtoCart" mnemonicParsing="false" onAction="#clickAddtoCartBtn" text="Add to Cart">
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Button>
-               </children>
+    <VBox fx:id="drinkCardVbox"
+          spacing="10"
+          styleClass="card-body">
+
+        <!-- Image -->
+        <StackPane>
+            <ImageView fx:id="drinkImage"
+                       fitWidth="180.0"
+                       fitHeight="140.0"
+                       preserveRatio="true"
+                       pickOnBounds="true"
+                       styleClass="card-image"/>
+        </StackPane>
+
+        <!-- Name -->
+        <Label fx:id="drinkName"
+               styleClass="card-header"
+               wrapText="true"
+               maxWidth="180.0"/>
+
+        <!-- Hot / Cold -->
+        <HBox spacing="10" alignment="CENTER_LEFT">
+            <RadioButton fx:id="hotOption" text="Hot"/>
+            <RadioButton fx:id="coldOption" text="Cold"/>
+        </HBox>
+
+        <!-- Price -->
+        <HBox spacing="8" alignment="CENTER_LEFT">
+            <Label text="Price:" styleClass="meta"/>
+            <Label fx:id="drinkPrice" styleClass="card-price"/>
+        </HBox>
+
+        <!-- Qty + Add -->
+        <HBox spacing="10" alignment="CENTER_LEFT">
+
+            <HBox alignment="CENTER" styleClass="qty-stepper">
+                <Button fx:id="decreaseBtn"
+                        text="-"
+                        mnemonicParsing="false"
+                        styleClass="card-dec-btn"/>
+                <Label fx:id="quantityLabel"
+                       text="0"
+                       alignment="CENTER"
+                       minWidth="28"
+                       prefWidth="28"
+                       styleClass="qty-label"/>
+                <Button fx:id="increaseBtn"
+                        text="+"
+                        mnemonicParsing="false"
+                        styleClass="card-inc-btn"/>
             </HBox>
-         </children>
-      </VBox>
-   </children>
-</HBox>
+
+            <Region HBox.hgrow="ALWAYS"/>
+
+            <Button fx:id="addToCartBtn"
+                    text="Add to Cart"
+                    mnemonicParsing="false"
+                    styleClass="card-btn"/>
+        </HBox>
+
+    </VBox>
+</StackPane>
