--- a/src/main/resources/views/ProductView.fxml
+++ b/src/main/resources/views/ProductView.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
@@ -9,78 +10,71 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<?import javafx.scene.control.Label?>
-<AnchorPane styleClass="container" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.cakeshopsystem.controllers.ProductViewController">
+<AnchorPane styleClass="container" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.ProductViewController">
 
-    <StackPane AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0"
-               AnchorPane.topAnchor="20.0">
+    <StackPane AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="20.0" AnchorPane.rightAnchor="20.0" AnchorPane.topAnchor="20.0">
 
         <!-- scrollable main content -->
-        <ScrollPane fx:id="mainScrollPane" fitToWidth="true" hbarPolicy="NEVER" vbarPolicy="ALWAYS">
+        <ScrollPane fx:id="mainScrollPane" fitToWidth="true" hbarPolicy="NEVER">
             <!-- IMPORTANT: don't center the VBox, let it fill width -->
             <VBox spacing="15">
                 <!-- top bar -->
                 <HBox alignment="CENTER_RIGHT">
-                    <Button fx:id="addNewProductBtn" mnemonicParsing="false" text="Add New Product"/>
+                    <Button fx:id="addNewProductBtn" mnemonicParsing="false" text="Add New Product" />
                 </HBox>
 
                 <!-- horizontal scrollers -->
-                <ScrollPane fx:id="discountedItemsScrollPane"
-                            hbarPolicy="ALWAYS"
-                            vbarPolicy="NEVER"
-                            fitToHeight="true"
-                            pannable="true">
+                <ScrollPane fx:id="discountedItemsScrollPane" fitToHeight="true" pannable="true" vbarPolicy="NEVER">
                     <VBox spacing="10">
-                        <Label text="Discounted Items" styleClass="title"/>
+                        <Label styleClass="title" text="Discounted Items" />
                         <HBox fx:id="discountedItemsHBox" spacing="30">
                             <padding>
-                                <Insets top="20" right="20" bottom="20" left="20"/>
+                                <Insets bottom="20" left="20" right="20" top="20" />
                             </padding>
                         </HBox>
                     </VBox>
                 </ScrollPane>
 
 
-                <ScrollPane fx:id="cakeScrollPane" fitToHeight="true" hbarPolicy="ALWAYS" vbarPolicy="NEVER">
+                <ScrollPane fx:id="cakeScrollPane" fitToHeight="true" vbarPolicy="NEVER">
                     <VBox>
-                        <Label text="Cakes" styleClass="title"/>
+                        <Label styleClass="title" text="Cakes" />
                         <HBox fx:id="cakeHBox" spacing="20">
                             <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                             </padding>
                         </HBox>
                     </VBox>
                 </ScrollPane>
 
-                <ScrollPane fx:id="drinkScrollPane" fitToHeight="true" hbarPolicy="ALWAYS" vbarPolicy="NEVER">
+                <ScrollPane fx:id="drinkScrollPane" fitToHeight="true" vbarPolicy="NEVER">
                     <VBox>
-                        <Label text="Drinks" styleClass="title"/>
+                        <Label styleClass="title" text="Drinks" />
                         <HBox fx:id="drinkHBox" spacing="20">
                             <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                             </padding>
                         </HBox>
                     </VBox>
                 </ScrollPane>
 
-                <ScrollPane fx:id="bakedGoodScrollPane" fitToHeight="true" hbarPolicy="ALWAYS" vbarPolicy="NEVER">
+                <ScrollPane fx:id="bakedGoodScrollPane" fitToHeight="true" vbarPolicy="NEVER">
                     <VBox>
-                        <Label text="Baked Goods" styleClass="title"/>
+                        <Label styleClass="title" text="Baked Goods" />
                         <HBox fx:id="bakedGoodHBox" spacing="20">
                             <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                             </padding>
                         </HBox>
                     </VBox>
                 </ScrollPane>
 
-                <ScrollPane fx:id="accessoryScrollPane" fitToHeight="true" hbarPolicy="ALWAYS" vbarPolicy="NEVER">
+                <ScrollPane fx:id="accessoryScrollPane" fitToHeight="true" vbarPolicy="NEVER">
                     <VBox>
-                        <Label text="Accessories" styleClass="title"/>
+                        <Label styleClass="title" text="Accessories" />
                         <HBox fx:id="accessoryHBox" spacing="20">
                             <padding>
-                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
+                                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                             </padding>
                         </HBox>
                     </VBox>
@@ -91,7 +85,7 @@
         <!-- floating overlay button (always bottom-right) -->
         <Button fx:id="cartBtn" mnemonicParsing="false" text="Cart" StackPane.alignment="BOTTOM_RIGHT">
             <graphic>
-                <FontIcon iconLiteral="fas-cart-plus" iconSize="15" styleClass="cart-icon"/>
+                <FontIcon iconLiteral="fas-cart-plus" iconSize="15" styleClass="cart-icon" />
             </graphic>
         </Button>
 
