--- a/src/main/resources/assets/css/base.css
+++ b/src/main/resources/assets/css/base.css
@@ -64,6 +64,13 @@
   -fx-border-width: 1;
   -fx-padding: 0 14 0 14;
 }
+
+/* Focus ring when control is focused */
+.text-field:focused,
+ .password-field:focused {
+    -fx-border-color: -app-accent-color;
+    -fx-border-width: 1.2px;
+}
 /* =========================
    ComboBox (theme-matched)
    ========================= */
@@ -92,7 +99,7 @@
     -fx-alignment: CENTER_LEFT;
     -fx-padding: 0 14px 0 14px;
 
-    -fx-text-fill: -app-base-text-color;
+    -fx-text-fill: -app-muted-text-color;
     -fx-background-color: transparent;
 }
 
@@ -136,7 +143,7 @@
 
 /* Hover */
 .combo-box-popup .list-cell:hover {
-    -fx-background-color: -app-secondary-color;
+    -fx-background-color: -app-icon-color;
     -fx-background-radius: 8px;
 }
 
