--- a/src/main/resources/assets/css/components.css
+++ b/src/main/resources/assets/css/components.css
@@ -162,6 +162,12 @@ Popup Close Button
     -fx-font-weight: 800;
 }
 
+.card-quantity {
+    -fx-text-fill: -app-secondary-color;
+    -fx-font-size: 16;
+    -fx-font-weight: 900;
+}
+
 /* Badge (DIY availability) */
 .badge {
     -fx-text-fill: -app-secondary-color;
@@ -178,6 +184,21 @@ Popup Close Button
     -fx-border-width: 1;
 }
 
+.badge-danger {
+    -fx-text-fill: -app-surface-color;
+    -fx-font-size: 11px;
+    -fx-font-weight: 800;
+
+    -fx-padding: 3 10 3 10;
+    -fx-background-radius: 999;
+    -fx-border-radius: 999;
+
+    /* mint tint so it matches accent but stays readable */
+    -fx-background-color: rgba(255, 0, 0, 0.18);
+    -fx-border-color: rgba(200, 0, 0, 0.45);
+    -fx-border-width: 1;
+}
+
 /* Quantity stepper */
 .qty-stepper {
     -fx-background-color: -app-bg-color;
@@ -185,7 +206,6 @@ Popup Close Button
     -fx-border-radius: 12;
     -fx-border-color: -app-border-color;
     -fx-border-width: 1;
-    -fx-padding: 2;
 }
 
 /* Qty label */
@@ -301,7 +321,7 @@ Popup Close Button
 }
 
 /* =========================
-   Card
+   Scroll Pane Scrollbars
    ========================= */
 .scroll-pane .scroll-bar:horizontal {
     -fx-pref-height: 12;
@@ -318,7 +338,6 @@ Popup Close Button
     -fx-background-radius: 999;
 }
 
-/*
 .scroll-pane .scroll-bar:vertical {
     -fx-pref-width: 10;
     -fx-min-width: 10;
@@ -333,4 +352,3 @@ Popup Close Button
     -fx-background-color: -app-icon-color;
     -fx-background-radius: 999;
 }
-*/
