--- a/src/main/resources/views/admin/AddUser.fxml
+++ b/src/main/resources/views/admin/AddUser.fxml
@@ -13,73 +13,77 @@
 <?import javafx.scene.layout.VBox?>
 <?import org.kordamp.ikonli.javafx.FontIcon?>
 
-<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.cakeshopsystem.controllers.AddUserController">
-    <children>
-        <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-            <children>
-                <Label styleClass="title" text="Add User" />
+<AnchorPane xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="com.cakeshopsystem.controllers.AddUserController">
+    <VBox alignment="CENTER" spacing="20.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0"
+          AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <Label styleClass="title" text="Add User"/>
 
-                <GridPane alignment="CENTER" hgap="10.0" vgap="5.0">
-                    <columnConstraints>
-                        <ColumnConstraints halignment="LEFT" hgrow="NEVER" minWidth="120.0" />
-                        <ColumnConstraints hgrow="NEVER" minWidth="200.0" />
-                    </columnConstraints>
+        <GridPane alignment="CENTER" hgap="10.0" vgap="5.0">
+            <columnConstraints>
+                <ColumnConstraints halignment="LEFT" hgrow="NEVER" minWidth="120.0"/>
+                <ColumnConstraints hgrow="NEVER" minWidth="200.0"/>
+            </columnConstraints>
 
-                    <rowConstraints>
-                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="NEVER" />
+            <rowConstraints>
+                <RowConstraints minHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints vgrow="NEVER"/>
 
-                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="NEVER" />
+                <RowConstraints minHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints vgrow="NEVER"/>
 
-                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="NEVER" />
+                <RowConstraints minHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints vgrow="NEVER"/>
 
-                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="NEVER" />
+                <RowConstraints minHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints vgrow="NEVER"/>
 
-                        <RowConstraints minHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints vgrow="NEVER" />
+                <RowConstraints minHeight="30.0" vgrow="SOMETIMES"/>
+                <RowConstraints vgrow="NEVER"/>
 
-                        <RowConstraints minHeight="40.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+                <RowConstraints minHeight="40.0" vgrow="SOMETIMES"/>
+            </rowConstraints>
 
-                    <children>
-                        <Label text="Username :" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-                        <TextField fx:id="usernameTextField" promptText="Enter Username" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-                        <Label fx:id="usernameErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <Label text="Username :" GridPane.columnIndex="0" GridPane.rowIndex="0"/>
+            <TextField fx:id="usernameTextField" promptText="Enter Username" GridPane.columnIndex="1"
+                       GridPane.rowIndex="0"/>
+            <Label fx:id="usernameErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
-                        <Label text="Email :" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-                        <TextField fx:id="emailTextField" promptText="Enter Email" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                        <Label fx:id="emailErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <Label text="Email :" GridPane.columnIndex="0" GridPane.rowIndex="2"/>
+            <TextField fx:id="emailTextField" promptText="Enter Email" GridPane.columnIndex="1"
+                       GridPane.rowIndex="2"/>
+            <Label fx:id="emailErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
-                        <Label text="Password :" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-                        <PasswordField fx:id="passwordPasswordField" promptText="Enter Password" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                        <Label fx:id="passwordErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label text="Password :" GridPane.columnIndex="0" GridPane.rowIndex="4"/>
+            <PasswordField fx:id="passwordPasswordField" promptText="Enter Password" GridPane.columnIndex="1"
+                           GridPane.rowIndex="4"/>
+            <Label fx:id="passwordErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="5"/>
 
-                        <Label text="Confirm Password :" GridPane.columnIndex="0" GridPane.rowIndex="6" />
-                        <PasswordField fx:id="confirmPasswordPasswordField" promptText="Confirm Password" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                        <Label fx:id="confirmPasswordErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Label text="Confirm Password :" GridPane.columnIndex="0" GridPane.rowIndex="6"/>
+            <PasswordField fx:id="confirmPasswordPasswordField" promptText="Confirm Password"
+                           GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <Label fx:id="confirmPasswordErrorMessage" wrapText="true" GridPane.columnIndex="1"
+                   GridPane.rowIndex="7"/>
 
-                        <Label text="Role :" GridPane.columnIndex="0" GridPane.rowIndex="8" />
-                        <ComboBox fx:id="roleComboBox" prefWidth="250.0" promptText="Select Role" GridPane.columnIndex="1" GridPane.rowIndex="8" />
-                        <Label fx:id="roleErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="9" />
+            <Label text="Role :" GridPane.columnIndex="0" GridPane.rowIndex="8"/>
+            <ComboBox fx:id="roleComboBox" prefWidth="250.0" promptText="Select Role" GridPane.columnIndex="1"
+                      GridPane.rowIndex="8"/>
+            <Label fx:id="roleErrorMessage" wrapText="true" GridPane.columnIndex="1" GridPane.rowIndex="9"/>
 
-                        <Button fx:id="addUserBtn" mnemonicParsing="false" text="Add User" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="10">
-                            <GridPane.margin>
-                                <Insets top="10.0" />
-                            </GridPane.margin>
-                        </Button>
-                  <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                  <TextField fx:id="confirmPasswordTextField" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-                  <FontIcon fx:id="eyeSlashToggleButton1" iconLiteral="fas-eye-slash" iconSize="24" translateX="-10.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
-                  <FontIcon fx:id="eyeSlashToggleButton2" iconLiteral="fas-eye-slash" iconSize="24" translateX="-10.0" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
-                    </children>
-                </GridPane>
-            </children>
-            <padding>
-                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
-            </padding>
-        </VBox>
-    </children>
+            <Button fx:id="addUserBtn" mnemonicParsing="false" text="Add User" GridPane.columnIndex="1"
+                    GridPane.halignment="RIGHT" GridPane.rowIndex="10">
+                <GridPane.margin>
+                    <Insets top="10.0"/>
+                </GridPane.margin>
+            </Button>
+            <TextField fx:id="passwordTextField" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
+            <TextField fx:id="confirmPasswordTextField" GridPane.columnIndex="1" GridPane.rowIndex="6"/>
+            <FontIcon fx:id="eyeSlashToggleButton1" iconLiteral="fas-eye-slash" iconSize="24" translateX="-10.0"
+                      GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS"
+                      GridPane.rowIndex="4"/>
+            <FontIcon fx:id="eyeSlashToggleButton2" iconLiteral="fas-eye-slash" iconSize="24" translateX="-10.0"
+                      GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.hgrow="ALWAYS"
+                      GridPane.rowIndex="6"/>
+        </GridPane>
+    </VBox>
 </AnchorPane>
